fixed some layout issues with IE7 for notifications
git-svn-id: svn+ssh://svn.wikia-code.com/svn/wikia/trunk@27537 e846bd91-c042-42a7-a218-4b65e2c1904d

--- a/skins/oasis/css/core/_Notifications.scss
+++ b/skins/oasis/css/core/_Notifications.scss
@@ -39,13 +39,14 @@
 	position: absolute;
 	li {
 		display: table-cell;
+		padding: 4px 4px 0;
 		vertical-align: bottom;
 		div {
 			@include border-radius(4px);
 			@include box-shadow(0, 0, 5px, mix($color-page, #000));
 			@include linear-gradient($color-notification-background, top, $color-notification-highlight, 35%, $color-notification-background, 65%);
 			color: $color-notification-text;
-			margin: 4px 4px 0;
+			margin: 0;
 			max-width: 175px;
 			overflow: hidden;
 			padding: 10px 20px;
